--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
+    "@eslint/js": "^9.14.0",
     "@jest/globals": "^29.6.1",
     "@types/jest": "^29.5.3",
     "babel-jest": "^29.6.1",
@@ -23,7 +24,9 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
+    "eslint": "^9.14.0",
     "fake-indexeddb": "^4.0.2",
+    "globals": "^15.12.0",
     "html-webpack-plugin": "^5.5.3",
     "http-server": "^14.1.1",
     "jest": "^29.6.1",
@@ -36,6 +39,7 @@
     "whatwg-fetch": "^3.6.2"
   },
   "dependencies": {
+    "eslint-config-dicodingacademy": "^0.9.4",
     "idb": "^8.0.0",
     "regenerator-runtime": "^0.14.0",
     "workbox-cli": "^7.3.0"
